[gd_scene load_steps=10 format=3 uid="uid://coxikvm8f5ecj"]

[ext_resource type="Script" path="res://start_menu.gd" id="1_gtbxw"]
[ext_resource type="Texture2D" uid="uid://blafpsubm12w" path="res://assets/image.png" id="2_mx3rb"]
[ext_resource type="FontFile" uid="uid://cejy1ebsxsq27" path="res://assets/POWER_UP.ttf" id="3_56u07"]
[ext_resource type="FontFile" uid="uid://bb88bdknwgbtj" path="res://assets/04B_30__.TTF" id="4_mr4ka"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wnmg7"]
texture = ExtResource("2_mx3rb")
modulate_color = Color(0.787759, 0.787759, 0.787759, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_quget"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uevwe"]
bg_color = Color(0.535854, 0.999999, 0.937757, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.247059, 0.247059, 0.247059, 0.556863)
shadow_size = 5
shadow_offset = Vector2(1.18, 3.64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4fjui"]
bg_color = Color(0, 0, 0, 0.65098)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8yn86"]
bg_color = Color(0.822712, 1, 0.970707, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.247059, 0.247059, 0.247059, 0.556863)
shadow_size = 5
shadow_offset = Vector2(1.18, 3.64)

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_gtbxw")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(15.315, 14.525)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wnmg7")

[node name="mainmenu_buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -130.0
offset_right = 188.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Start" type="Button" parent="mainmenu_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_56u07")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_quget")
theme_override_styles/hover = SubResource("StyleBoxFlat_uevwe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4fjui")
theme_override_styles/normal = SubResource("StyleBoxFlat_8yn86")
text = "Start Game"

[node name="options" type="Button" parent="mainmenu_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_56u07")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_quget")
theme_override_styles/hover = SubResource("StyleBoxFlat_uevwe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4fjui")
theme_override_styles/normal = SubResource("StyleBoxFlat_8yn86")
text = "Options"

[node name="exit" type="Button" parent="mainmenu_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_56u07")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_quget")
theme_override_styles/hover = SubResource("StyleBoxFlat_uevwe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4fjui")
theme_override_styles/normal = SubResource("StyleBoxFlat_8yn86")
text = "Exit"

[node name="Gamename" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -608.0
offset_top = -294.0
offset_right = 622.0
offset_bottom = -137.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("4_mr4ka")
theme_override_font_sizes/font_size = 111
text = "BubbleGUM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="options" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1156.0
offset_bottom = 652.0

[node name="VBoxContainer" type="VBoxContainer" parent="options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -138.5
offset_top = -63.5
offset_right = 138.5
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Video" type="Button" parent="options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_quget")
theme_override_styles/hover = SubResource("StyleBoxFlat_uevwe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4fjui")
theme_override_styles/normal = SubResource("StyleBoxFlat_uevwe")
text = "Video"

[node name="Audio" type="Button" parent="options/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_quget")
theme_override_styles/hover = SubResource("StyleBoxFlat_uevwe")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4fjui")
theme_override_styles/normal = SubResource("StyleBoxFlat_uevwe")
text = "Audio"

[node name="backfromoptions" type="Button" parent="options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = 262.0
offset_right = 41.5
offset_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="Video" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 651.0

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.0
offset_top = -48.0
offset_right = 119.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 30
text = "Fullscreen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 30
text = "Borderless"

[node name="VSync" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 30
text = "VSync"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fullscreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3

[node name="VSync" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3

[node name="backfromvideo" type="Button" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = 262.0
offset_right = 41.5
offset_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[node name="Audio" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 1157.0
offset_bottom = 652.0

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -46.0
offset_right = 171.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 25
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 25
text = "Music"

[node name="SFX" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 25
text = "SFX"

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 3

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 3

[node name="SFX" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 3

[node name="backfromaudio" type="Button" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = 262.0
offset_right = 41.5
offset_bottom = 293.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[connection signal="pressed" from="mainmenu_buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="mainmenu_buttons/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="mainmenu_buttons/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="options/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="options/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="options/backfromoptions" to="." method="_on_backfromoptions_pressed"]
[connection signal="pressed" from="Video/backfromvideo" to="." method="_on_backfromvideo_pressed"]
[connection signal="pressed" from="Audio/backfromaudio" to="." method="_on_backfromaudio_pressed"]
